tests/paczka1/small_fuzzy/80183654.err
Error in line 8: oMqELbyzBT A435 58,8
Error in line 11: oMqELbyzBT S727 76,8
